# KakatuaEditor

./: CMakeLists.txt  CodeEditor.cpp  CodeEditor.hpp  FindInFilesWindow.cpp  FindInFilesWindow.hpp  FindWindow.cpp  FindWindow.hpp  ProcedureTreeWindow.cpp  ProcedureTreeWindow.hpp  ReplaceInFilesWindow.cpp  ReplaceInFilesWindow.hpp  ReplaceWindow.cpp  ReplaceWindow.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp  TextEditor.cpp  TextEditor.hpp  darktheme.qss  main.cpp  myQt6.hpp  resources.qrc  text.1
